--------------------------------------------------------------------------------
drkns 08.09.2022 01:08:00 +0100 - build 6020

1. Ignore directories when looking for specific file masks, e.g. lng & hlf.

2. Improve exception messages.

3. Improve recovery after exceptions in window processing.

4. Handle exceptions in help & remove a few old workarounds.

--------------------------------------------------------------------------------
yjh 07.09.2022 00:39:44 +0300 - build 6019

1. SQLite v3.39.3.

--------------------------------------------------------------------------------
drkns 04.09.2022 18:26:41 +0100 - build 6018

1. 0003336: Regex \{(.)?\} finds } in {}.

--------------------------------------------------------------------------------
drkns 04.09.2022 16:59:33 +0100 - build 6017

1. Enable VT directly from color dialog if supported.

--------------------------------------------------------------------------------
drkns 31.08.2022 20:57:09 +0100 - build 6016

1. Support FILE_ATTRIBUTE_DEVICE.

2. Use SAFESEH on x86.

3. Refactoring.

--------------------------------------------------------------------------------
drkns 30.08.2022 19:54:53 +0100 - build 6015

1. Improve exception diagnostics.

--------------------------------------------------------------------------------
drkns 29.08.2022 21:59:46 +0100 - build 6014

1. Refactoring.

2. Correction of 5998.

3. Minor hlf corrections.

--------------------------------------------------------------------------------
drkns 13.08.2022 23:34:12 +0100 - build 6013

1. Whole words regex search in editor.

--------------------------------------------------------------------------------
drkns 13.08.2022 14:23:53 +0100 - build 6012

1. Include disassembly in bug_report.txt.

2. Refactoring.

--------------------------------------------------------------------------------
drkns 10.08.2022 22:34:43 +0100 - build 6011

1. Fix change disk dialog behavior.

2. Do not try to execute empty commands.
