@@ -1,4 +1,9 @@
 --------------------------------------------------------------------------------
+drkns 10.09.2022 18:06:24 +0100 - build 6021
+
+1. Add smooth rotation to 256 color picker.
+
+--------------------------------------------------------------------------------
 drkns 08.09.2022 01:08:00 +0100 - build 6020
 
 1. Ignore directories when looking for specific file masks, e.g. lng & hlf.
